--- a/ArgoTest.Api/deployment.yml
+++ b/ArgoTest.Api/deployment.yml
@@ -1,21 +1,21 @@
 ﻿apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webapi-deployment
+  name: ArgoTest.Api-deployment
   labels:
-    app: webapi
+    app: ArgoTest.Api
 spec:
   replicas: 2  # Número de pods
   selector:
     matchLabels:
-      app: webapi
+      app: ArgoTest.Api
   template:
     metadata:
       labels:
-        app: webapi
+        app: ArgoTest.Api
     spec:
       containers:
-      - name: webapi
+      - name: ArgoTest.Api
         image: tu-registro.azurecr.io/webapi:latest  # 📌 Cambia por tu imagen Docker
         ports:
         - containerPort: 80
