--- a/.github/workflows/docker-image-microservices1.yml
+++ b/.github/workflows/docker-image-microservices1.yml
@@ -2,7 +2,7 @@ name: Build Microservices1
 on:
   push:
     branches:
-      - main # o la rama que uses para deploy
+      - master # o la rama que uses para deploy
 
 jobs:
   build-and-push:
