--- a/.github/workflows/docker-image-microservices2.yml
+++ b/.github/workflows/docker-image-microservices2.yml
@@ -1,4 +1,4 @@
-name: Build Microservices1
+name: Build Microservices2
 on:
   push:
     branches:
@@ -25,6 +25,6 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: ./Dockerfile
+        file: ./Microservices2/Dockerfile
         push: true
         tags: elalejmartin/microservices2:dev
