--- a/.github/workflows/docker-image-microservices1.yml
+++ b/.github/workflows/docker-image-microservices1.yml
@@ -25,6 +25,6 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: ./Dockerfile
+        file: ./Microservices1/Dockerfile
         push: true
         tags: elalejmartin/microservices1:dev
