--- a/k8s/Microservices2/argo-cd.yaml
+++ b/k8s/Microservices2/argo-cd.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: 'https://github.com/elalejmartin/ArgoTest.git'
     targetRevision: master
-    path: Microservices2
+    path: k8s/Microservices2
     kustomize: {}
   destination:
     server: 'https://kubernetes.default.svc'
