--- a/k8s/Microservices1/argo-cd.yaml
+++ b/k8s/Microservices1/argo-cd.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: microservices-1
-  namespace: default
+  namespace: argocd
 spec:
   project: default
   source:
@@ -12,7 +12,7 @@ spec:
     kustomize: {}
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: default
+    namespace: argocd
   syncPolicy:
     automated:
       prune: true
