--- a/k8s/Microservices1/service.yaml
+++ b/k8s/Microservices1/service.yaml
@@ -9,5 +9,4 @@ spec:
     - protocol: TCP
       port: 81
       targetPort: 81
-      nodePort: 30081 # puerto entre 30000-32767
-  type: NodePort
+  type: ClusterIP
